--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-    <h1>Web site</h1>
+   <section class="Pic-Description">
+    <div class="Intro-part">
+        <h1 class="header-font">Welcome </h1>
+        <h1 class="color-of-header">To Developer Hub</h1>
+        <h3 class="intro">Aim to build strong and productive website</h3>
+        <p class="Description">I am Asif Mahmud,I love to build front end websites.So lets know what is front end developer.A front-end developer builds the front-end portion of websites and web applications—that is, the part that users actually see and interact with. A front-end developer creates websites and applications using web languages such as HTML, CSS, and JavaScript allow users to access and interact with the site or app.</p>
+        <button class="button"><a class="div"target="_blank" href="https://bd.linkedin.com/">HIRE ME</a></button>
+       </div>
+       <div class="Intro-part">
+           <img  class="asif-pic"src="bgimg.jpg">
+       </div>
+   </section>
 </body>
 </html>
