--- a/portfolio.html
+++ b/portfolio.html
@@ -20,5 +20,18 @@
            <img  class="asif-pic"src="bgimg.jpg">
        </div>
    </section>
+   <section class="Pic-Description" id="as">
+    <div class="Intro-part">
+        <img  class="asif-pic"src="bg2img.jpg">
+    </div>
+    <div class="Intro-part" id="padding">
+        
+        <h1 class="color-of-header">Growing as a proffiecient Developer</h1>
+        <h3 class="intro">Trying to make beautiful website</h3>
+        <p class="Description">I am Asif Mahmud,I love to build front end websites.As well as I love to develop backend site.So lets know what is front end developer.A front-end developer builds the front-end portion of websites and web applications—that is, the part that users actually see and interact with. A front-end developer creates websites and applications using web languages such as HTML, CSS, and JavaScript allow users to access and interact with the site or app.</p>
+        <button class="button"><a class="div"target="_blank" href="https://bd.linkedin.com/">DOWNLOAD RESUME</a></button>
+       </div>
+       
+   </section>
 </body>
 </html>
