--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
+    <nav class="nav">
+        <li class="list"><a class="link-nav" href="facebook.com">Home</a></li>
+        <li class="list"><a class="link-nav" href="facebook.com">About</a></li>
+        <li class="list"> <a class="link-nav" href="facebook.com">Experiances</a></li>
+        <li class="list"><a class="link-nav" href="facebook.com">Description</a></li>
+        <li class="list"><a class="link-nav" href="facebook.com">Contact</a></li>
+    </nav>
    <section class="Pic-Description">
     <div class="Intro-part">
         <h1 class="header-font">Welcome </h1>
@@ -51,6 +58,12 @@
             <p id="waxx">I have experiance in Java, python ,jdbc.a front-end developer is a good career choice. It is in demand by some of the top-tier companies like Amazon, Deloitte, HCL, etc. Plus, the average pay base per year for a front-end developer is quite good. All in all, an in-demand position, good pay, and new learning every day</p>
            </div>
    </section>
+
+  <div>
+    <footer class="footer">
+        Copywright@Asif Mahmud-2022 || All Right Reserved Inc
+    </footer>
+  </div>
   
 
 </body>
